# tauri-plugin-device-ai-apis

./: .editorconfig  .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  RELEASING.md  ai.json  build.rs  manifest  package-lock.json  package.json  workflows-README.md
.beads/: config.yaml  issues.jsonl  metadata.json
.github/: TRUSTED_PUBLISHING_SETUP.md
.github/workflows/: release.yml  test.yml
.husky/: pre-commit
android/: build.gradle.kts
android/src/androidTest/java/: ExampleInstrumentedTest.kt
android/src/main/: AndroidManifest.xml
android/src/test/java/: ExampleUnitTest.kt
crates/device-ai/: Cargo.toml  README.md  build.rs
crates/device-ai/build-support/: swift-runtime-search-paths.rs
crates/device-ai/examples/: device-ai.rs
crates/device-ai/src/: capabilities.rs  error.rs  lib.rs  macos.rs  windows.rs
crates/device-ai/src/models/: mod.rs
crates/device-ai/src/swift/: llm_bridge.swift
examples/tauri-app/: README.md  package-lock.json  package.json
examples/tauri-app/public/samples/: manifest.json
examples/tauri-app/src/: App.svelte  main.js
examples/tauri-app/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
examples/tauri-app/src-tauri/capabilities/: default.json
examples/tauri-app/src-tauri/src/: lib.rs
guest-js/: capabilities.ts  errors.ts  index.ts  llm.ts  platform.ts  speech.ts  text.ts  types.ts  vision.ts  web-barcode.ts  web-speech.ts
ios/: Package.swift  README.md
ios/Sources/: DeviceAiPlugin.swift
permissions/: all.toml  capabilities.toml  default.toml  llm.toml  speech.toml  text.toml  vision.toml
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: get_capabilities.toml  llm_check_availability.toml  llm_create_session.toml  llm_destroy_session.toml  llm_generate.toml  llm_generate_stream.toml  llm_get_model_info.toml  llm_rewrite.toml  llm_session_send.toml  llm_session_send_stream.toml  llm_summarize.toml  speech_get_voices.toml  speech_recognize.toml  speech_recognize_start.toml  speech_recognize_stop.toml  speech_synthesize.toml  text_identify_language.toml  vision_classify_image.toml  vision_detect_barcodes.toml  vision_detect_faces.toml  vision_recognize_text.toml
permissions/schemas/: schema.json
scripts/: validate-release.mjs
src/: desktop.rs  error.rs  lib.rs  mobile.rs
src/commands/: llm.rs  mod.rs  speech.rs  text.rs  vision.rs
src/models/: mod.rs
(+1 files in other folders)
