[package]
name = "tauri-plugin-device-ai-apis"
version = "0.1.1"
authors = ["Hypothesi"]
description = "A Tauri plugin for cross-platform device AI capabilities including speech, vision, and text processing"
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-device-ai-apis"
license = "MIT OR Apache-2.0"
repository = "https://github.com/hypothesi/tauri-plugin-device-ai-apis"
keywords = ["tauri", "plugin", "ai", "speech", "vision"]
categories = ["api-bindings", "multimedia"]

[workspace]
members = ["crates/device-ai"]

[dependencies]
tauri = { version = "2.10.2" }
device-ai = { version = "0.1.1", path = "crates/device-ai" }
serde = { version = "1.0", features = ["derive"] }

[build-dependencies]
tauri-plugin = { version = "2.5.3", features = ["build"] }
